--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
 title: "CV"
-redirect: /files/Research CV_Fall'24-2.pdf
+url: /files/Research CV_Fall'24-2.pdf
 author_profile: true
 ---
